TOMEE-125: More JAX-RS Test coverage in the build
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1237719 13f79535-47bb-0310-9956-ffa450edef68